# routes/loginAdmin.js
@@ -1,0 +1,14 @@
+//FOR JWT TOKEN
+const express = require('express');
+const router = express.Router();
+
+const adminController = require('../controllers/admin');
+
+router.post('/', adminController.loginAdmin);
+
+module.exports = router;
+
+
+
+
+
